syntax = "proto3";

package common;

option go_package = "github.com/goibibo/intent-score/pkg/api/common";

enum Org {
    UNKNOWN_ORG = 0;
    GI = 1;
    MMT = 2;
}

enum Vertical {
    UNKNOWN_VERTICAL = 0;
    HOTELS = 1;
    FLIGHTS = 2;
    CARS = 3;
    BUS = 4;
    TRAINS = 5;
    METRO = 6;
    EXPERIENCES = 7;
    HOLIDAYS = 8;
}

enum PageHitType {
    UNKNOWN_PAGE = 0;
    SEARCH_PAGE = 1;
    DETAIL_PAGE = 2;
    REVIEW_PAGE = 3;
    PAYMENT_PAGE = 4;
    TRANSACTION_PAGE = 5;
}

